--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "cheerio": "^1.0.0",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.3",
     "fs-extra": "^11.2.0",
     "node-fetch": "^2.7.0",
     "path": "^0.12.7",
+    "pg": "^8.15.6",
+    "pg-promise": "^11.13.0",
     "puppeteer": "^24.8.0"
   },
   "engines": {
