--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-validator": "^7.0.1",
     "fs-extra": "^11.2.0",
     "helmet": "^7.1.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^2.7.0",
     "path": "^0.12.7",
